# python-boilerplate

./: .gitignore  pyproject.toml  readme.md  requirements.txt  sample.env
package1/: module1.py  settings.py
package1/tests/: test_module1.py
scripts/: __init__.py
